crates/torrentctl/src/screens/snapshots/torrentctl__screens__pool__tests__pool_apply_confirm_160x48.snap
---
source: crates/torrentctl/src/screens/pool/tests.rs
expression: screen
---
 Overview   Tree   Library  [Plans]                                                                                               [ ] views  ● mutations allowed
╭ plan #8 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│         plan  #8  delete_orphans  ‖ draft  3 steps                                                                                                           │
│      created  2026-09-27 10:00 UTC   applied —                                                                                                               │
│confirm token  7f3a-9c21  deletes data: applying asks for this, typed back                                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ steps ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  seq   op            status         path                                                                                                                     │
│›     1 delete_file   ● done         stray/old.mkv                                                                                                            │
│      2 delete_file   ✖ failed       stray/sample.mkv                                                                                                         │
│                                     ✖ permission denied                                                                                                      │
│      3 delete_file   ‖ pending      stray/extras/cover.jpg                                                                                                   │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                               ╭ Apply plan #8 ───────────────────────────────────────────────╮                                               │
│                                               │This deletes 2 files from disk and cannot be undone. The      │                                               │
│                                               │daemon waits until every step has run.                        │                                               │
│                                               │                                                              │                                               │
│                                               │Type 7f3a-9c21 to confirm:                                    │                                               │
│                                               │› 7f3a                                                        │                                               │
│                                               │Enter confirm  Esc cancel                                     │                                               │
│                                               │                                                              │                                               │
│                                               ╰──────────────────────────────────────────────────────────────╯                                               │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
╰ Esc back  c create  x apply  X discard ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
