crates/torrentctl/src/screens/snapshots/torrentctl__screens__pool__tests__pool_library_marked_160x48.snap
---
source: crates/torrentctl/src/screens/pool/tests.rs
expression: screen
---
 Overview   Tree  [Library]  Plans                                                                                                [ ] views  ● mutations allowed
╭ library · all states · 2 marked ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│    infohash     name                                                                                                size   files  state        profile       │
│  ✓ 010101010101 Some.Linux.Distro.0.x86_64.iso                                                                   2.8 GiB       1  ● adopted    acct_a        │
│    020202020202 Some.Linux.Distro.1.x86_64.iso                                                                   5.6 GiB       8  ◐ matched    —             │
│  ✓ 030303030303 Some.Linux.Distro.2.x86_64.iso                                                                   8.4 GiB      15  ◐ partial    —             │
│›   040404040404 Some.Linux.Distro.3.x86_64.iso                                                                  11.2 GiB      22  · unmatched  —             │
│    050505050505 Some.Linux.Distro.4.x86_64.iso                                                                  14.0 GiB      29  ✖ drifted    —             │
│    060606060606 Some.Linux.Distro.5.x86_64.iso                                                                  16.8 GiB      36  ○ missing    —             │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
╰ space mark  v verify  a adopt  F filter  Esc clear marks ────────────────────────────────────────────────────────────────────────────────────────────────────╯
