crates/torrentctl/src/screens/snapshots/torrentctl__screens__pool__tests__pool_overview_160x48.snap
---
source: crates/torrentctl/src/screens/pool/tests.rs
expression: screen
---
[Overview]  Tree   Library   Plans                                                                                                  [ ] views  ‖ read-only plans
╭ library ─────────────────────────────────────────────────────────────────────╮╭ adoption ────────────────────────────────────────────────────────────────────╮
│      library  /srv/library                                                   ││● adopted        800 ████████████████████████████████████···················· │
│     torrents  1,234                                                          ││◐ matched        300 █████████████··········································· │
│        files  56,789                                                         ││◐ shared           6 █······················································· │
│        roots  3                                                              ││◐ partial         50 ██······················································ │
│    verifying  4 queued · 2 running                                           ││○ missing         40 █······················································· │
│                                                                              ││✖ drifted          3 █······················································· │
│                                                                              ││✖ overlap         11 █······················································· │
│                                                                              ││· unmatched       24 █······················································· │
╰──────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯
╭ roots █ adopted ▓ matched ░ orphan ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  id    path                                                        total    adopted    matched     orphan     files  orphaned  share                         │
│› #1    /srv/pool/a                                               4.0 TiB    2.5 TiB    1.0 TiB  200.0 GiB    40,000     1,200  ██████████████████▓▓▓▓▓▓▓░····│
│  #2    /srv/pool/b                                               2.0 TiB    1.0 TiB        0 B        0 B    12,000         0  ███████████████···············│
│  #3    /mnt/archive/cold-storage                               800.0 GiB        0 B  100.0 GiB  650.0 GiB     5,000     4,100  ▓▓▓░░░░░░░░░░░░░░░░░░░░░░░░···│
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
╰ Enter browse root  s scan  d drift check ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ last run ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   scan  57,000 files · 6.8 TiB · 1,234 torrents → ◐ matched 300 · ◐ partial 50 · ○ missing 40 · ✖ overlap 11 · ◐ shared 6 · 2 errors                         │
│  drift  ✖ 3 drifted: 090909090909 0a0a0a0a0a0a 0b0b0b0b0b0b · 4 files changed · 1 vanished                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
