crates/torrentctl/src/screens/snapshots/torrentctl__screens__pool__tests__pool_overview_80x24.snap
---
source: crates/torrentctl/src/screens/pool/tests.rs
expression: screen
---
[Overview]  Tree   Library   Plans                  [ ] views  ‖ read-only plans
╭ library ─────────────────────────────╮╭ adoption ────────────────────────────╮
│      library  /srv/library           ││● adopted        800 ██████████······ │
│     torrents  1,234                  ││◐ matched        300 ███············· │
│        files  56,789                 ││◐ shared           6 █··············· │
│        roots  3                      ││◐ partial         50 █··············· │
│    verifying  4 queued · 2 running   ││○ missing         40 █··············· │
│                                      ││✖ drifted          3 █··············· │
│                                      ││✖ overlap         11 █··············· │
│                                      ││· unmatched       24 █··············· │
╰──────────────────────────────────────╯╰──────────────────────────────────────╯
╭ roots █ adopted ▓ matched ░ orphan ──────────────────────────────────────────╮
│  id    path                                  total     orphan  share         │
│› #1    /srv/pool/a                         4.0 TiB  200.0 GiB  ████████▓▓▓░··│
│  #2    /srv/pool/b                         2.0 TiB        0 B  ███████·······│
│  #3    /mnt/archive/cold-storage         800.0 GiB  650.0 GiB  ▓░░░░░░░░░░░··│
│                                                                              │
╰ Enter browse root  s scan  d drift check ────────────────────────────────────╯
╭ last run ────────────────────────────────────────────────────────────────────╮
│   scan  57,000 files · 6.8 TiB · 1,234 torrents                              │
│         ◐ matched 300 · ◐ partial 50 · ○ missing 40 ·                        │
│         ✖ overlap 11 · ◐ shared 6 · 2 errors                                 │
│  drift  ✖ 3 drifted: 090909090909 +2 · 4 files changed · 1 vanished          │
╰──────────────────────────────────────────────────────────────────────────────╯
